<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.tanayagrawal.myappportfolio.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/heading_margin"
        android:text="@string/nanodegree_apps"
        android:textSize="@dimen/text_heading_size" />

    <Button
        android:id="@+id/spotify_streamer_button"
        style="@style/ButtonStyle"
        android:text="@string/spotify_streamer" />

    <Button
        android:id="@+id/scores_app_button"
        style="@style/ButtonStyle"
        android:text="@string/scores_app" />

    <Button
        android:id="@+id/library_app_button"
        style="@style/ButtonStyle"
        android:text="@string/library_app" />

    <Button
        android:id="@+id/build_bigger_button"
        style="@style/ButtonStyle"
        android:text="@string/build_it_bigger" />

    <Button
        android:id="@+id/xyz_reader_button"
        style="@style/ButtonStyle"
        android:text="@string/xyz_reader" />

    <Button
        android:id="@+id/capstone_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="@dimen/button_margin"
        android:background="@color/colorPrimary"
        android:text="@string/capstone"
        android:textColor="@color/text_color" />
</LinearLayout>
